resolve footer overlap bug by tweaking css syntax

--- a/src/Sk.css
+++ b/src/Sk.css
@@ -354,18 +354,22 @@ p.team-founder {
 .viz-timestamp {
 	font-style: italic;
 }
-.dob-view,.language-view .col-lg-7 {
+.dob-view .col-lg-7 {
 	margin-bottom: 2rem;
 	margin-left: 1rem;
 }
-.dob-view,.language-view .col-lg-7 .wrapper {
-
-} 
 .dob-view .col-lg-7 .wrapper {
 	width: 90%;
 	height: 20rem;
 }
-
+.language-view .col-lg-7 {
+	margin-bottom: 2rem;
+	margin-left: 1rem;
+}
+.language-view .col-lg-7 .wrapper {
+	width: 90%;
+	height: 20rem;
+}
 .expand-genders {
 	text-align: right;
 }
